<resources>

    <string name="username">User Name</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="reset">Reset</string>
    <string name="usernamehint">someone@example.com</string>
    <string name="passwordhint">Your Password</string>
    <string name="donthaveaccount">Don\'t Have an Account?</string>
    <string name="title_activity_home"></string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">HackPlat</string>
    <string name="nav_header_subtitle">damsarar@hackplat.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="app_name">HackPlat</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_link_to_register">Don not have an account? Sign up now.</string>
    <string name="btn_link_to_login">Already registred! Login here.</string>
    <string name="welcome">Welcome!</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="name">Fullname</string>

</resources>
